tests/toy/neg/000962_mutation.toylang
program a = { if a then bool sleep; } .
